# Universal

./: CMakeLists.txt  baseClassClaude.h  baseClassDrake.h  main.cpp  main.h  mixin.h
file/: file.h
fileIO/: include.h  tag.h  trivialFileIO.h
gui/: gui.h  include.h  tag.h  trivialGui.h
impl/: impl.h  include.h  tag.h  trivialImpl.h
ipc/: include.h  ipc.h  tag.h  trivialIpc.h
net/: include.h  tag.h  trivialNet.h
network/: network.h
refl/: include.h  refl.h  tag.h  trivialRefl.h
reflection/: reflection.h
term/: include.h  tag.h  terminal.h
terminal/: terminal.h
